Final adjustments to implement frontend